博客初步完成

--- a/_posts/11.10.md
+++ b/_posts/11.10.md
@@ -4,7 +4,7 @@ excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo
 coverImage: '/assets/blog/dynamic-routing/cover.jpg'
 date: '2020-03-16T05:35:07.322Z'
 ogImage:
-  url: '/assets/blog/dynamic-routing/cover.jpg'
+  url: '/cover.jpg'
 author:
   name: JJ Kasper
   picture: '/assets/blog/authors/jj.jpeg'
@@ -15,9 +15,11 @@ author:
 - [ ] 重写提纲
 - [ ] 《课堂小练》P221 《读韩愈》
 - [ ] 背诵《梦游天姥吟留别》
-
+---
 ## 历史
-- [ ] 选官制度和中枢机构的笔记拍照上传
+[x] 选官制度和中枢机构的笔记拍照上传
 
-## 数学
-- [ ] 课时37
+
+```
+class 
+```
