--- a/_posts/11.10.md
+++ b/_posts/11.10.md
@@ -4,7 +4,7 @@ excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo
 coverImage: '/assets/blog/dynamic-routing/cover.jpg'
 date: '2020-03-16T05:35:07.322Z'
 ogImage:
-  url: '/cover.jpg'
+  url: '/people.jpg'
 author:
   name: JJ Kasper
   picture: '/assets/blog/authors/jj.jpeg'
