将 PostType 转移至 api

--- a/_posts/11.10.md
+++ b/_posts/11.10.md
@@ -1,10 +1,10 @@
 ---
 title: 'Dynamic Routing and Static Generation'
-excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
-coverImage: '/assets/blog/dynamic-routing/cover.jpg'
+excerpt: '红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水红糖水'
 date: '2020-03-16T05:35:07.322Z'
 ogImage:
   url: '/people.jpg'
+  desc: '一个行走的人'
 author:
   name: JJ Kasper
   picture: '/assets/blog/authors/jj.jpeg'
