--- a/_posts/features/11.10.md
+++ b/_posts/features/11.10.md
@@ -5,7 +5,7 @@ date: "2022-11-18T18:19:00.008+08:00"
 ogImage:
   url: '/image/defaultcover.jpg'
   desc: "作业列表"
-feature: ""
+feature: "website"
 ---
 
 <!-- 目录标题请假装看不见，用于内部自动生成目录时锚点使用 -->
